--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
     "react-checkbox-tree": "^1.8.0",
