--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/react": "^18.2.20",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "babel-plugin-styled-components": "^2.1.4"
   },
