--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.1",
-    "@mui/lab": "^5.0.0-alpha.136",
+    "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "@syncfusion/ej2-react-navigations": "^22.1.38",
@@ -24,6 +24,7 @@
     "momentjs": "^2.0.0",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
+    "react-arborist": "^3.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
