--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
       <artifactId>commons-text</artifactId>
       <version>1.10.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <classifier>jakarta</classifier>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
