--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     authentication:
       username: neo4j
       password: neo4jtfg
+  cache:
+    jcache:
+      config: classpath:ehcache.xml
 management:
   endpoints:
     web:
