--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -2299,7 +2299,7 @@ components:
           type: string
         teamShortName:
           type: string
-        knowsResumed:
+        knows:
           type: array
           items:
             type: object
